[package]
name = "chacha20-blake3"
# Also update README
version = "0.9.11"
edition = "2024"
rust-version = "1.85"
description = "ChaCha20-BLAKE3: Secure, Simple and Fast encryption for any CPU"
homepage = "https://kerkour.com/chacha20-blake3"
repository = "https://github.com/paddor/chacha20-blake3"
license = "MIT"
keywords = ["cryptography", "chacha20", "blake3", "encryption", "aead"]
categories = ["cryptography"]
readme = "../README.md"

[lib]
path = "./chacha20_blake3.rs"

[dependencies]
blake3 = { workspace = true }
constant_time_eq = { workspace = true }
zeroize = { workspace = true, optional = true }

[features]
default = ["std", "zeroize"]

alloc = ["zeroize?/alloc"]
std = ["alloc"]
zeroize = ["dep:zeroize", "blake3/zeroize"]


[dev-dependencies]
hex = "0.4"
